add missiles, missile position update, flexible board, missiles and meteor creator function

--- a/style.css
+++ b/style.css
@@ -18,3 +18,9 @@ body {
   position: absolute;
   bottom: 0;
 }
+.shot {
+  width: 2px;
+  height: 10px;
+  background-color: white;
+  position: absolute;
+}
