--- a/style.css
+++ b/style.css
@@ -2,8 +2,6 @@
   border: 1px;
   border-color: black;
   background-color: #192949;
-  width: 1000px;
-  height: 500px;
   position: relative;
 }
 body {
@@ -23,4 +21,9 @@ body {
   height: 10px;
   background-color: white;
   position: absolute;
+}
+.meteor {
+  position: absolute;
+  width: 50px;
+  height: 50px;
 }
