--- a/style.css
+++ b/style.css
@@ -27,3 +27,10 @@ body {
   width: 50px;
   height: 50px;
 }
+.star {
+  position: absolute;
+  width: 2px;
+  height: 2px;
+  background-color: white;
+  opacity: 0.5;
+}
