--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Nunito&display=swap');
+
 .board {
   border: 1px;
   border-color: black;
   background-color: #192949;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
 body {
   display: flex;
@@ -26,6 +32,9 @@ body {
   position: absolute;
   width: 50px;
   height: 50px;
+  background-image: url('https://assets.website-files.com/5cfa0a3c809181819a5fd8c2/60814ef1cc0a9e60933fcdfc_Atom%20%20Cookie%20%20Illu.svg');
+  background-position: -5px;
+  border-color: transparent;
 }
 .star {
   position: absolute;
@@ -33,4 +42,64 @@ body {
   height: 2px;
   background-color: white;
   opacity: 0.5;
+}
+.killScreen {
+  z-index: 1;
+  text-align: center;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #192949;
+  border-style: solid;
+  border-width: 1px;
+  padding: 50px;
+  max-width: 650px;
+}
+.gameOverTitle {
+  font-size: 30px;
+  line-height: 37px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  letter-spacing: 1.5px;
+  color: transparent;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #82bdac;
+  font-family: 'Montserrat Static', sans-serif;
+}
+.gameOverParagraph {
+  font-family: 'Nunito', 'sans-serif';
+  margin: 50px 0 25px 0;
+}
+.scoreText {
+  margin-top: 10px;
+  margin-bottom: 20px;
+  font-family: 'Montserrat', sans-serif;
+  color: #82bdac;
+  font-size: 28px;
+  font-weight: 500;
+  letter-spacing: 2.05px;
+}
+.restart {
+  z-index: 1;
+  margin-top: 15px;
+  padding: 15px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #e0593c;
+  font-family: 'Fira Mono', sans-serif;
+  color: #fff;
+  font-size: 13px;
+  letter-spacing: 1.86px;
+  text-transform: uppercase;
+  background-color: transparent;
+  cursor: pointer;
+  transition-duration: 0.5s;
+}
+.restart:hover {
+  color: #192949;
+  background-color: rgba(255, 255, 255, 0.8);
+  font-weight: 500;
 }
